# slacli

./: .gitignore  .goreleaser.yml  .tagpr  CHANGELOG.md  LICENSE  README.md  lefthook.yaml  renovate.json
.github/actions/release/: action.yml
.github/workflows/: build-test.yml  ci.yml  tagpr.yml
crates/agentskills/: Cargo.toml
crates/agentskills/src/: copy.rs  discover.rs  error.rs  lib.rs  metadata.rs  resolve.rs  skill.rs  validate.rs
crates/agentskills/src/commands/: install.rs  list.rs  mod.rs  reinstall.rs  status.rs  uninstall.rs  update.rs
crates/agentskills/tests/fixtures/skills/no-description/: SKILL.md
crates/agentskills/tests/fixtures/skills/valid-skill/: SKILL.md
crates/slacli/: Cargo.toml
crates/slacli/skills/slacli/: SKILL.md
crates/slacli/src/: cli.rs  client.rs  config.rs  error.rs  main.rs  state.rs
crates/slacli/src/commands/: chat.rs  config_cmd.rs  init.rs  logs.rs  mod.rs  profile.rs
