[package]
name = "agentskills"
version = "0.1.0"
edition = "2021"
description = "Agent Skills management library for Rust. Inspired by skillsmith (https://github.com/Songmu/skillsmith)."

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.149"
semver = "1.0.27"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
include_dir = "0.7.4"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3.27.0"
