[package]
name = "slacli"
version = "0.0.2"
edition = "2021"

[dependencies]
agentskills = { path = "../agentskills" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls-no-provider",
] }
rustls = { version = "0.23.37", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
rpassword = "7.4.0"
include_dir = "0.7.4"
